# ANZ-TheBookStore

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic-create.sh  cloudbuild.yaml  docker-build.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_24__22_59_59_books.py
app/: __init__.py  database.py  server.py
app/bookstore/: api.py  crud.py  models.py  schemas.py
