[tool.poetry]
name = "thebookstore"
version = "0.1.0"
description = ""
authors = ["Hemant Jhunjhunwala <hemant.iitkgp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
